# awsome-tui

./: .coveragerc  .gitignore  CLAUDE.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
scripts/: quality.sh
src/awsome/: __main__.py  cli.py  main.py
tests/: test_awsome_main.py  test_cli.py  test_one.py
